[package]
name = "log_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
chrono = "0.4.23"
aws-sdk-lambda = "0.21.0"
lambda_runtime = "0.7.1"
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
openssl = { version = "0.10.35", features = ["vendored"] }
tokio-native-tls = "0.3.0"
dotenv = "0.15.0"
secrets = { path = "../secrets" }
