[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
axum = "0.5"
lambda_http = "0.6"
lambda_runtime = "0.6.0"
hyper = "0.14"
bytes = "1.0"
http = "0.2"
tower = "0.4.13"
tower-service = "0.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.2", features = ["full"] }
base64 = "0.13.0"
dotenv = "0.15.0"
axum-aws-lambda = "0.2.0"
tokio-native-tls = "0.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
openssl = { version = "0.10.35", features = ["vendored"] }
tracing-subscriber = { version = "0.3.15", features = ["json"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
aws-config = "0.51.0"
aws-types = "0.13"
hex = "0.4.3"
aws-sdk-s3 = "0.21.0"
futures = "0.3.25"
rand = "0.8.5"
chrono = "0.4.23"
chrono-tz = "0.8.1"
aws-sdk-lambda = "0.21.0"
secrets = { path = "../secrets" }
